Add flyway to create and update database

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.password=admin
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 # This configuration is set to eliminate PgConnection.createClob() exception
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
