--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'org.springframework.boot' version '2.1.8.RELEASE'
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'java'
+    id "org.flywaydb.flyway" version "6.0.3"
+
 }
 
 group = 'com.tarek.springboot'
@@ -15,6 +17,8 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.flywaydb:flyway-core')
     runtime('org.postgresql:postgresql')
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
