--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id 'java'
     id "org.flywaydb.flyway" version "6.0.3"
+    id "io.freefair.lombok" version "4.1.0"
 
 }
 
@@ -20,5 +21,11 @@ dependencies {
     compile('org.flywaydb:flyway-core')
     runtime('org.postgresql:postgresql')
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.junit.jupiter:junit-jupiter-engine:5.2.0')
+    testCompile('org.mockito:mockito-junit-jupiter:2.23.0')
+
+}
+test {
+    useJUnitPlatform()
 }
