--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
+################### Actuator Configuration ##########################
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoint.metrics.enabled=true
+management.metrics.export.prometheus.enabled=true
